# geopatcher

./: 404.html  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_REVIEW.md  Makefile  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  release-please-config.json
.github/: copilot-instructions.md
.github/instructions/: docs-examples.instructions.md
.github/workflows/: ci.yml  typecheck.yml
api/reference/: index.html
assets/make_diagrams/: index.html
concepts/: index.html
contributing/: index.html
decisions/: index.html
design/query-matchup/: index.html
docs/: concepts.md  decisions.md  index.md  observability.md  patching.md  quickstart.md
docs/api/: reference.md
docs/notebooks/: catalog_patching.ipynb  patcher_lake_tahoe.ipynb  patching_backends.ipynb  patching_geometries.ipynb  patching_intro.ipynb  patching_sampling.ipynb  patching_streaming.ipynb  patching_time.ipynb  recipes_grain.ipynb  recipes_jax_vmap.ipynb  recipes_torch_dataset.ipynb
docs/recipes/: journal-and-resume.md  on-error-policies.md  streaming-overlap-add.md
notebooks/patcher_lake_tahoe/: index.html
observability/: index.html
patching/: index.html
patching/async-prefetch/: index.html
quickstart/: index.html
recipes/journal-and-resume/: index.html
recipes/on-error-policies/: index.html
recipes/streaming-overlap-add/: index.html
search/: search_index.json
src/geopatcher/: __init__.py  fields.py  matched.py  runners.py
src/geopatcher/_src/: config.py  hooks.py  journal.py  objstore.py  patch.py  prefetch.py  protocols.py  spatial_time.py  stacking.py
src/geopatcher/_src/fields/: __init__.py  obstore_cog.py  raster.py  xarray.py
src/geopatcher/_src/matched/: __init__.py  field.py  patch.py  patcher.py
src/geopatcher/_src/spatial/: __init__.py  aggregation.py  geometry.py  patcher.py  sampler.py  window.py
src/geopatcher/_src/time/: __init__.py  aggregation.py  patcher.py  sampler.py  window.py
src/geopatcher/integrations/: pipekit.py
src/geopatcher/jax/: __init__.py
tests/: test_aggregation.py  test_async_parallel.py  test_boundary_policy.py  test_determinism.py  test_get_config.py  test_hooks.py  test_matched_e2e.py  test_matched_integration.py  test_matched_skeleton.py  test_matched_spatiotemporal_patcher.py  test_matched_temporal_patcher.py  test_ml_primitives.py  test_obstore_cog_field.py  test_operational_scale.py  test_parallel_map_batched.py  test_roundtrip.py  test_runners.py  test_sampler.py  test_spatial_global_context.py  test_spatial_patcher.py  test_spatial_time.py  test_streaming_golden.py  test_temporal_patcher.py
tests/integrations/: test_pipekit.py
